# mini

./: .gitignore  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  getpwd.c
tests/: Makefile.am  Makefile.in  test1.sh  test2.sh  test3.sh  test4.sh
